# time-series

./: README.md  makefile  stack.yaml  time-series.cabal  ts-ssm.cabal
app/forex/: Main.hs
data/forex/: AUDJPY_hour.csv  AUDUSD_hour.csv  EURCHF_hour.csv  EURGBP_hour.csv  EURJPY_hour.csv  EURUSD_hour.csv  GBPJPY_hour.csv  GBPUSD_hour.csv  USDJPY_hour.csv
src/: Lib.hs
src/Data/: TimeSeries.hs
src/Data/TimeSeries/: Forex.hs  Plots.hs
src/Data/TimeSeries/Forex/: Types.hs  Utils.hs
src/Lib/Parsers/: Forex.hs  GoogleFinance.hs  HistoricalFX.hs
test/: LibSpec.hs
