name:                ts-ssm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/ts-ssm
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          example@example.com
copyright:           2017 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5

executable ts-ssm
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ts-ssm

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ts-ssm
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/ts-ssm
